--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'info.solidsoft.pitest' version '1.5.1'
 }
 apply plugin: 'java'
-apply plugin: "jacoco"
+//apply plugin: "jacoco"
 
 version = '1.0.0'
 
@@ -25,17 +25,17 @@ dependencies {
     testCompile 'com.oneeyedmen:okeydoke:1.2.0'
 }
 
-jacoco {
-    toolVersion = "0.8.2"
-    reportsDir = file("$buildDir/customJacocoReportDir")
-}
-jacocoTestReport {
-    reports {
-        xml.enabled false
-        csv.enabled false
-        html.destination file("${buildDir}/jacocoHtml")
-    }
-}
+//jacoco {
+//    toolVersion = "0.8.2"
+//    reportsDir = file("$buildDir/customJacocoReportDir")
+//}
+//jacocoTestReport {
+//    reports {
+//        xml.enabled false
+//        csv.enabled false
+//        html.destination file("${buildDir}/jacocoHtml")
+//    }
+//}
 pitest {
     targetClasses = ['com.oocode.*']
     outputFormats = ['HTML']
